--- a/Table task/Table task/Base.lproj/Main.storyboard
+++ b/Table task/Table task/Base.lproj/Main.storyboard
@@ -68,7 +68,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="944.92753623188412" y="93.75"/>
+            <point key="canvasLocation" x="962" y="-533"/>
         </scene>
         <!--Stage2 View Controller-->
         <scene sceneID="lWo-97-T7a">
@@ -89,7 +89,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="126"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WpQ-sn-0ju">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WpQ-sn-0ju">
                                                     <rect key="frame" x="30" y="13" width="100" height="100"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="100" id="8tS-9E-3ky"/>
@@ -142,7 +142,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ftJ-jC-zRg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2143.4782608695655" y="93.75"/>
+            <point key="canvasLocation" x="961" y="290"/>
         </scene>
         <!--Stage3 View Controller-->
         <scene sceneID="2Pq-Kc-HwR">
@@ -242,7 +242,7 @@
                                                         <constraint firstItem="Vty-ZH-JKA" firstAttribute="leading" secondItem="0Nq-6r-bGa" secondAttribute="trailing" constant="61" id="lkV-Fo-Qde"/>
                                                     </constraints>
                                                 </view>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0HZ-zk-fJo">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0HZ-zk-fJo">
                                                     <rect key="frame" x="87" y="73" width="240" height="150"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="150" id="0yh-Bx-lez"/>
@@ -262,6 +262,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="bioLabel" destination="GNN-cu-Qin" id="ZDq-wn-gmk"/>
+                                            <outlet property="detailsView" destination="jQ8-Cx-ePF" id="An4-ur-A37"/>
                                             <outlet property="nameLabel" destination="qQU-1V-nOf" id="bFE-c9-jVx"/>
                                             <outlet property="noOfFollowers" destination="uNZ-vK-8mV" id="toi-5R-ceq"/>
                                             <outlet property="noOfFollowing" destination="r57-1a-Z6a" id="ZK7-41-QiZ"/>
@@ -292,7 +293,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wSs-zN-WmX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2111.594202898551" y="831.69642857142856"/>
+            <point key="canvasLocation" x="1867" y="290"/>
         </scene>
         <!--Stage1 View Controller-->
         <scene sceneID="JjN-fk-jhl">
@@ -349,7 +350,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Var-f6-PH5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2146" y="-676"/>
+            <point key="canvasLocation" x="51" y="290"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="NT6-kK-rLb">
@@ -367,7 +368,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8gD-DC-hkE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="34.782608695652179" y="93.75"/>
+            <point key="canvasLocation" x="52" y="-533"/>
         </scene>
     </scenes>
     <resources>
